style: Fix new chat dialog contact list spacing
Fix the css selector so that the style is properly applied

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -153,6 +153,6 @@ button.delete-button {
 }
 
 .no-margin,
-.no-margin > scrolledwindow > viewport > clamp {
+preferencespage.no-margin > scrolledwindow > viewport > clamp > box {
   margin: 0;
 }
